--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="hero-unit">
+
+<h1>Jason Chee's Demo Website!</h1>
+<p>
+	You found the home page for the 
+	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+	application.
+</p>
+<p>
+
+	<%= link_to "Sign Up Now!", "#", class: "btn btn-primary btn-large" %>
+
+</p>
+
+</div>
